--- a/polobar/index.html
+++ b/polobar/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel - Polobar</title>
     <style>
-        body { background-color: green; color: #fff; font-family: Arial, sans-serif; padding: 20px; }
+        body { background-color: #000; color: #fff; font-family: Arial, sans-serif; padding: 20px; }
         .card { background: #8B0000; border-radius: 16px; padding: 20px; margin: 10px 0; }
         a { color: #fff; text-decoration: none; font-size: 18px; }
     </style>
