--- a/polobar/index.html
+++ b/polobar/index.html
@@ -57,7 +57,33 @@
     <div class="card"><a href="edwin.html">👤 Edwin Calderón — $200.000</a></div>
     <div class="card"><a href="camilo.html">👤 Camilo Mahecha — $150.000</a></div>
     <div class="card"><a href="cristian.html">👤 Cristian Sotelo — $160.000</a></div>
+    <button onclick="descargarBackup()" style="margin-top: 20px; padding: 10px 20px; background: green; color: white; border: none; border-radius: 8px; font-size: 16px;">
+    Descargar respaldo (.json)
+</button>
+
 
     <div class="footer">© Polobar 2025</div>
+    <script>
+function descargarBackup() {
+    const clientes = ['edwin', 'camilo', 'cristian'];
+    const respaldo = {};
+
+    clientes.forEach(cliente => {
+        const data = localStorage.getItem(`movimientos_${cliente}`);
+        respaldo[cliente] = data ? JSON.parse(data) : [];
+    });
+
+    const blob = new Blob([JSON.stringify(respaldo, null, 2)], { type: 'application/json' });
+    const url = URL.createObjectURL(blob);
+
+    const link = document.createElement('a');
+    link.href = url;
+    link.download = 'respaldo_polobar.json';
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+    URL.revokeObjectURL(url);
+}
+</script>
 </body>
 </html>
