--- a/polobar/edwin.html
+++ b/polobar/edwin.html
@@ -21,36 +21,36 @@
     <h3>Historial:</h3>
     <div id="historial"></div>
 
-    <script>
-        const clave = "edwin_historial";
+   <script>
+    const clave = "movimientos_edwin";
 
-        function cargarHistorial() {
-            const data = JSON.parse(localStorage.getItem(clave)) || [];
-            const cont = document.getElementById('historial');
-            cont.innerHTML = data.map(item => `
-                <div class='card'>
-                    <b>${item.tipo}:</b> ${item.valor} <br>
-                    <small>${item.fecha}</small>
-                </div>
-            `).join('');
+    function cargarHistorial() {
+        const data = JSON.parse(localStorage.getItem(clave)) || [];
+        const cont = document.getElementById('historial');
+        cont.innerHTML = data.map(item => `
+            <div class='card'>
+                <b>${item.tipo}:</b> ${item.valor} <br>
+                <small>${item.fecha}</small>
+            </div>
+        `).join('');
+    }
+
+    function registrar(tipo) {
+        const valor = parseFloat(document.getElementById('valor').value);
+        if (isNaN(valor) || valor <= 0) {
+            alert("Ingrese un valor válido");
+            return;
         }
+        const fecha = new Date().toLocaleString();
+        const nuevo = { tipo, valor, fecha };
+        const data = JSON.parse(localStorage.getItem(clave)) || [];
+        data.unshift(nuevo);
+        localStorage.setItem(clave, JSON.stringify(data));
+        document.getElementById('valor').value = "";
+        cargarHistorial();
+    }
 
-        function registrar(tipo) {
-            const valor = parseFloat(document.getElementById('valor').value);
-            if (isNaN(valor) || valor <= 0) {
-                alert("Ingrese un valor válido");
-                return;
-            }
-            const fecha = new Date().toLocaleString();
-            const nuevo = { tipo, valor, fecha };
-            const data = JSON.parse(localStorage.getItem(clave)) || [];
-            data.unshift(nuevo);
-            localStorage.setItem(clave, JSON.stringify(data));
-            document.getElementById('valor').value = "";
-            cargarHistorial();
-        }
-
-        window.onload = cargarHistorial;
-    </script>
+    window.onload = cargarHistorial;
+</script>
 </body>
 </html>
