--- a/polobar/camilo.html
+++ b/polobar/camilo.html
@@ -22,7 +22,7 @@
     <div id="historial"></div>
 
     <script>
-        const clave = "camilo_historial";
+      const clave = "movimientos_camilo";
 
         function cargarHistorial() {
             const data = JSON.parse(localStorage.getItem(clave)) || [];
