--- a/polobar/cristian.html
+++ b/polobar/cristian.html
@@ -22,8 +22,8 @@
     <div id="historial"></div>
 
     <script>
-        const clave = "cristian_historial";
-
+       const clave = "movimientos_cristian"
+        
         function cargarHistorial() {
             const data = JSON.parse(localStorage.getItem(clave)) || [];
             const cont = document.getElementById('historial');
